<resources>
    <string name="app_name">NMedia</string>
    <string name="nMedia">NMedia!</string>
    <string name="author">Netology. University of Internet Professions of the Future</string>
    <string name="published">May 21 at 6:36 pm</string>
    <string name="content">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives. Then there were courses on design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes you want more, aim higher, run faster. Our mission is to help you get on the path of growth and start the chain of change - http://netolo.gy/fyb</string>
    <string name="count_like" translatable="false">10</string>
    <string name="count_repost" translatable="false">5</string>
    <string name="count_view" translatable="false">5</string>
    <string name="post_text">Post text</string>
    <string name="menu_remove">Remove</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="chooser_share_post">Share Post</string>
    <string name="edit_post">Editing post</string>
    <string name="create_post">Create post</string>
    <string name="title_video">Media illustration. Invitation to design lecture</string>
</resources>