<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        app:layout_constraintBottom_toTopOf="@id/header_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/options_post"
        app:layout_constraintStart_toEndOf="@id/avatar_image"
        app:layout_constraintTop_toTopOf="@id/avatar_image" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@id/avatar_image"
        app:layout_constraintEnd_toStartOf="@id/options_post"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/options_post"
        android:layout_width="@dimen/posts_view_size"
        android:layout_height="@dimen/posts_view_size"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/author"
        app:srcCompat="@drawable/ic_more_vert_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/common_spacing"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar_image, published, options_post" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="10"
        android:text="@string/content"
        app:layout_constraintBottom_toTopOf="@id/footer_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="like, share, view" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/like"
        android:layout_width="@dimen/posts_view_size"
        android:layout_height="@dimen/posts_view_size"
        android:layout_marginTop="@dimen/footer_spacing_top"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer_barrier"
        app:srcCompat="@drawable/ic_like_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/count_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/footer_spacing_value"
        android:text="@string/count_like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/share"
        android:layout_width="@dimen/posts_view_size"
        android:layout_height="@dimen/posts_view_size"
        android:layout_marginStart="@dimen/footer_spacing_components"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/count_like"
        app:layout_constraintTop_toTopOf="@id/like"
        app:srcCompat="@drawable/ic_share_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/count_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/footer_spacing_value"
        android:text="@string/count_repost"
        app:layout_constraintBottom_toBottomOf="@id/share"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toTopOf="@id/share" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/view"
        android:layout_width="@dimen/posts_view_size"
        android:layout_height="@dimen/posts_view_size"
        android:layout_marginEnd="@dimen/footer_spacing_value"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintEnd_toStartOf="@id/count_view"
        app:layout_constraintTop_toTopOf="@id/like"
        app:srcCompat="@drawable/ic_visibility_24"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/footer_spacing_value"
        android:text="@string/count_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/share" />


</androidx.constraintlayout.widget.ConstraintLayout>