<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@id/header_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar_image"
        app:layout_constraintTop_toTopOf="@id/avatar_image" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@id/avatar_image"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/author"
        app:srcCompat="@drawable/ic_more_vert_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/common_spacing"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar_image, published, menu" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        android:ellipsize="end"
        android:maxLines="10"
        android:text="@string/content"
        app:layout_constraintBottom_toTopOf="@id/video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_barrier" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="video, play, title_video" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/video_views"
        app:layout_constraintBottom_toTopOf="@id/title_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_posts" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/blue_grey_scale"
        android:contentDescription="@string/todo"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="@id/video"
        app:layout_constraintEnd_toEndOf="@id/video"
        app:layout_constraintStart_toStartOf="@id/video"
        app:layout_constraintTop_toTopOf="@id/video"
        app:srcCompat="@drawable/ic_play_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title_video"
        android:layout_marginBottom="@dimen/margin_bottom_title_video"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/title_video"
        android:textColor="@color/blue_grey"
        android:textSize="@dimen/video_title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/footer_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="like, share, view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.App.ButtonCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer_barrier"
        tools:text="1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.App.ButtonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/footer_spacing_components"
        app:icon="@drawable/ic_share_24"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
        tools:text="1" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/view"
        android:layout_width="@dimen/posts_view_size"
        android:layout_height="@dimen/posts_view_size"
        android:layout_marginEnd="@dimen/footer_spacing_value"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintEnd_toStartOf="@id/count_view"
        app:layout_constraintTop_toTopOf="@id/like"
        app:srcCompat="@drawable/ic_visibility_24"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/footer_spacing_value"
        android:text="@string/count_view"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/share" />


</androidx.constraintlayout.widget.ConstraintLayout>